--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
-    "@azure/functions": "^1.0.2-beta2",
-    "typescript": "^3.3.3"
+    "@azure/functions": "^1.2.2",
+    "typescript": "^3.9.6"
   }
 }
